[project]
name = "slang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.12, >=3.9"
dependencies = [
    "minijinja>=2.2.0",
    "result>=0.17.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slang"]


[tool.pyright]
include = ["slang", "tests"]
typeCheckingMode = "standard"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.7",
]
